Sat Feb 28 15:44:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_dump.c (rb_vm_bugreport): get rid of making new strings
	  inside signal context.

	* variable.c (rb_tmp_class_path): defer making temporary class
	  path string.

	* variable.c (rb_search_class_path): search class path or return
	  Qnil or Qfalse if unnamed, not creating a temporary path.

Sat Feb 28 15:02:02 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_tmp_class_path): preserve name encoding of an
	  anonymous instance of module/class subclass.

Sat Feb 28 08:24:30 2015  Rei Odaira  <Rei.Odaira@gmail.com>

	* ext/pty/pty.c: AIX supports autopush.
	  Patch by Perry Smith [ruby-core:58539] [Bug #9144]

Fri Feb 27 22:00:05 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rubygems: Update to RubyGems 2.4.6 and HEAD(800f2e6).
	  Fixed #1159, #1171, #1173 on rubygems/rubygems
	* test/rubygems: ditto.

Fri Feb 27 20:55:42 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rake: Update to rake (9237e74), typo fix and remove needless
	  private syntax.
	* test/rake: ditto.

Fri Feb 27 17:06:44 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h: define vm_svar_index.

	* vm_insnhelper.c, vm.c, compile.c: use vm_svar_index names.

	* iseq.h: remove DEFAULT_SPECIAL_VAR_COUNT.
	  use VM_SVAR_FLIPFLOP_START instead.

Fri Feb 27 13:57:48 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (setup_narg): wipe away expanded part of buffer to get rid
	  of revealing uncleaned data.  reported by Dongkwan Kim <dkay AT
	  kaist.ac.kr>.

Wed Feb 25 22:25:07 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* spec/default.mspec: use default configuration file name.
	  https://github.com/ruby/rubyspec/commit/cc69f337b06362e5607ffa3e3ad40ef7494960cf

Wed Feb 25 22:21:56 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* spec/default.mspec: remove specific version number.
	  https://github.com/ruby/rubyspec/commit/7a909e925c1baa9c700bd44af9241aef6e596714
